# go-hash-libs

./: .gitignore  README.md  fnv.go  fnv_bench_test.go  fnv_test.go  go.mod  hash.go  murmur_hash_2.go  murmur_hash_2_test.go
cgo/: murmur_hash_2.go
cgo/murmur_hash_cpp/include/murmurhash/: MurmurHash2.h  MurmurHash3.h
cgo/murmur_hash_cpp/src/: MurmurHash2.cpp  MurmurHash3.cpp
internal/cgo/murmur_hash_cpp/: CMakeLists.txt
